[package]
name = "example-iced-audio-viz"
version = "0.1.0"
resolver = "2"
edition = "2018"
license = "MIT"
homepage = "https://github.com/yamadapc/augmented-audio"
repository = "https://github.com/yamadapc/augmented-audio"

[dependencies]
iced = { version = "0.8.0", features = ["tokio", "canvas"] }
basedrop = "^0.1.2"
log = "^0.4.14"
cpal = { version = "0.15.1" }
vst = "0.4.0"

audio-processor-standalone = { version = "2.0.0" }
audio-garbage-collector = { version = "1.1.0" }
atomic-queue = { version = "1.0.1" }
audio-processor-traits = { version = "3.2.0" }

[package.metadata.augmented]
private = true
